llm/vllm-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vllm-server-svc
spec:
  ports:
  - name: http-vllm-server
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: vllm
  sessionAffinity: None
  type: ClusterIP
